<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_refresh"
        app:iconTint="#FFFFFF"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_fullscreen"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/fullscreen"
        app:iconTint="#FFFFFF"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        app:iconTint="#FFFFFF"
        app:showAsAction="never" />
</menu>
